--- a/sig.cabal
+++ b/sig.cabal
@@ -15,18 +15,21 @@ cabal-version:       >=1.10
 library
   exposed-modules:     Sig
   build-depends:       base >=4.9 && <4.10
+                     , binary
                      , bytestring
+                     , deepseq
+                     , dhall
                      , parallel
                      , mmap
   hs-source-dirs:      src
   default-language:    Haskell2010
   c-sources:           cbits/sig.c
-  ghc-options:         -threaded -with-rtsopts=-N -O2
+  ghc-options:         -threaded -with-rtsopts=-N -O0
   cc-options:          -mssse3 -O3
 
 executable sig
   hs-source-dirs:      app
   main-is:             Main.hs
   build-depends:       base, sig
-  ghc-options:         -threaded -with-rtsopts=-N -O2
+  ghc-options:         -threaded -with-rtsopts=-N -O0
   cc-options:          -mssse3 -O3
