--- a/sig.cabal
+++ b/sig.cabal
@@ -16,8 +16,8 @@ library
   exposed-modules:     Sig
                      , Sig.Examples
                      , Sig.Main
-                     , Sig.Matrix
                      , Sig.State
+                     , Sig.StateMachine
                      , Sig.Transition
   build-depends:       base >=4.9 && <4.10
                      , binary
