--- a/sig.cabal
+++ b/sig.cabal
@@ -28,12 +28,12 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
   c-sources:           cbits/sig.c
-  ghc-options:         -threaded -with-rtsopts=-N
+  ghc-options:         -threaded -with-rtsopts=-N -Wall
   cc-options:          -mssse3 -O3
 
 executable sig
   hs-source-dirs:      app
   main-is:             Main.hs
   build-depends:       base, sig
-  ghc-options:         -threaded -with-rtsopts=-N
+  ghc-options:         -threaded -with-rtsopts=-N -Wall
   cc-options:          -mssse3 -O3
