--- a/sig.cabal
+++ b/sig.cabal
@@ -28,7 +28,7 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
   c-sources:           cbits/sig.c
-  ghc-options:         -threaded -with-rtsopts=-N -Wall
+  ghc-options:         -Wall
   cc-options:          -mssse3 -O3
 
 executable sig
