--- a/sig.cabal
+++ b/sig.cabal
@@ -24,6 +24,7 @@ library
                      , bytestring
                      , parallel
                      , mmap
+                     , vector
   hs-source-dirs:      src
   default-language:    Haskell2010
   c-sources:           cbits/sig.c
