--- a/sig.cabal
+++ b/sig.cabal
@@ -24,6 +24,8 @@ library
                      , bytestring
                      , parallel
                      , mmap
+                     , optparse-generic
+                     , system-filepath
                      , vector
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -31,7 +33,7 @@ library
   ghc-options:         -Wall
   cc-options:          -mssse3 -O3
 
-executable sig
+executable sig-benchmark
   hs-source-dirs:      app
   main-is:             Main.hs
   build-depends:       base, sig
