--- a/sig.cabal
+++ b/sig.cabal
@@ -15,14 +15,10 @@ cabal-version:       >=1.10
 library
   exposed-modules:     Sig
                      , Sig.Examples
-                     , Sig.Main
   build-depends:       base >=4.9 && < 5
                      , binary
                      , bytestring
                      , parallel
-                     , mmap
-                     , optparse-generic
-                     , system-filepath
                      , vector
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -31,9 +27,13 @@ library
   cc-options:          -mssse3 -O3
 
 executable sig-benchmark
-  hs-source-dirs:      app
+  hs-source-dirs:      sig-benchmark
   main-is:             Main.hs
-  build-depends:       base, sig
+  build-depends:       base
+                     , sig
+                     , mmap
+                     , optparse-generic
+                     , system-filepath
   ghc-options:         -threaded -with-rtsopts=-N -Wall
   cc-options:          -mssse3 -O3
   default-language:    Haskell2010
