--- a/sig.cabal
+++ b/sig.cabal
@@ -24,7 +24,7 @@ library
   default-language:    Haskell2010
   c-sources:           cbits/sig.c
   ghc-options:         -Wall
-  cc-options:          -mssse3 -O3
+  cc-options:          -mavx2 -O3
 
 executable sig-benchmark
   hs-source-dirs:      sig-benchmark
