--- a/sig.cabal
+++ b/sig.cabal
@@ -24,7 +24,7 @@ library
   default-language:    Haskell2010
   c-sources:           cbits/sig.c
   ghc-options:         -Wall
-  cc-options:          -mavx2 -mssse3 -msse4.2 -O3
+  cc-options:          -mavx2 -mssse3 -msse4.2 -O3 -Wno-psabi
 
 executable sig-benchmark
   hs-source-dirs:      sig-benchmark
@@ -35,5 +35,4 @@ executable sig-benchmark
                      , optparse-generic
                      , system-filepath
   ghc-options:         -threaded -with-rtsopts=-N -Wall
-  cc-options:          -mssse3 -O3
   default-language:    Haskell2010
